2010-03-03  Thomas M. Hinkle  <tom@grenville>

	* src/lib/GourmetRecipeManager.py (GourmetApplication.get_attribute_model):
	Don't bother caching the attribute models. It results in
	inconsistency for the user and it's not that expensive to just
	regenerate the lists each time we need them.

	* defaults_en.py defaults_en_GB.py ++T. and t. as abbreviations
	for Tablespoon and teaspoon

2010-02-09  Thomas M. Hinkle  <tom@grenville>

	* src/lib/GourmetRecipeManager.py (RecGui): Make
	delete-key-deletes-recipe behavior a callback on keypresses only
	in treeview. This prevents users using the delete key in the
	search box from accidentally deleting recipes. Also, let backspace
	delete recipes as well for convenience. 

	* src/lib/backends/db.py (RecData.get_criteria): Make sure search
	strings are proper unicode objects. Fixes bug #2948135.

2010-01-16  Thomas M. Hinkle  <tom@grenville>

	* src/lib/version.py Version->0.15.4
	* src/lib/plugins/import_export/web_import_plugin/webpage_importer.py (WebParser.postparse):
	Strip extra newlines.
	(MenuAndAdStrippingWebParser.cut_menus): Add more common website
	nav class ID's (footer, header, sitemap).
	(MenuAndAdStrippingWebParser.cut_menus): Don't ignore the whole
	body tag, no matter what (fixes epicurious import)

	* src/lib/importers/interactive_importer.py (InteractiveImporter.set_text):
	Strip extra newlines.

2010-01-15  Thomas M. Hinkle  <tom@grenville>

	* src/lib/gtk_extras/thumbnail.py (check_for_thumbnail): Catch
	non-ASCII characters in URLs.

2010-01-06  Thomas M. Hinkle  <tom@grenville>

	* src/lib/importers/interactive_importer.py (InteractiveImporter):
	Replace text-tags in buffers with ComboBox widget that allows user
	to change tag of marked-up region. Also, separated out giant list
	of buttons into categories and made more suitable for wider and
	shorter screens.

2010-01-02  Thomas M. Hinkle  <tom@grenville>

	* src/lib/plugins/key_editor/recipeEditorPlugin.py (IngredientKeyEditor.setup_tree):