@@ -1,3 +1,9 @@
+2010-03-05  Thomas M. Hinkle  <tom@grenville>
+
+	* src/lib/reccard.py (IngredientTreeUI.ingtree_keypress_cb): Make
+	delete-key in ingredient editor view only work in treeview (same
+	as change made for main view on 2/9/2010).
+
 2010-03-03  Thomas M. Hinkle  <tom@grenville>
 
 	* src/lib/GourmetRecipeManager.py (GourmetApplication.get_attribute_model):
